# cmake-sdl-project-template

./: .gitignore  CMakeLists.txt  README.md
include/: global.h
source/: main.cpp
